# ai-native-editor

./: .agent  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: building.md
docs/ai/: agent-backends-and-local-assist.md  ai-editor-agent.md  editor-tool-api.md
docs/architecture/: engine-substrate-roadmap.md  render-pipeline-model.md  runtime-editor-separation.md  system-architecture.md
docs/decisions/: 0001-native-original-editor.md  0002-ai-chat-is-core.md  0003-multi-agent-backends-and-local-prompt-assist.md
docs/planning/: focused-project-tree-implementation-brief.md  implementation-backlog.md  mvp-roadmap.md  product-brief.md  project-folder-save-location-implementation-brief.md  risks-and-license-notes.md  runtime-log-capture-implementation-brief.md
projects/CaveDemos/Assets/Scenes/: Prototype.scene.json
projects/CaveDemos/Assets/TempTerrainTextures/: TEST_ONLY_DO_NOT_SHIP.txt
projects/DefaultProject/: AI Native Project.aineproject.json
projects/DefaultProject/Assets/Scenes/: Prototype.scene.json
projects/FirstGame/: AI Native Project.aineproject.json
projects/FirstGame/Assets/Materials/: CoinDash.materials.json
projects/FirstGame/Assets/Scenes/: CoinDash.scene.json
projects/FirstGame/Assets/Templates/: CoinDashTemplates.aineentity.json
projects/MultiCaveDemos/: AI Native Project.aineproject.json
projects/MultiCaveDemos/Assets/Scenes/: Prototype.scene.json
projects/MultiCaveDemos/Assets/TempTerrainTextures/: TEST_ONLY_DO_NOT_SHIP.txt
projects/PhysicsDemos/: AI Native Project.aineproject.json
projects/PhysicsDemos/Assets/Scenes/: Physics2D.scene.json  Physics3D.scene.json
projects/ProjectSettingsSmoke/: AI Native Project.aineproject.json
projects/ProjectSettingsSmoke/Assets/Scenes/: Prototype.scene.json
projects/ProjectSettingsSmoke/ProjectSettings/: AssetDatabase.json
projects/TerrainDemos/: AI Native Project.aineproject.json  UnifiedTerrainSurfaceProof.audit.txt
projects/TerrainDemos/Assets/Imported/Models/: SmokeModel.gltf
projects/TerrainDemos/Assets/Materials/: SmokeMaterial.material.json
projects/TerrainDemos/Assets/Scenes/: Prototype.scene.json  TerrainDemos.scene.json  UnifiedTerrainSurfaceProof.scene.json
projects/TerrainDemos/Assets/Scripts/Gameplay/: SmokeToolScript.cs
projects/TerrainDemos/Assets/TempTerrainTextures/: TEST_ONLY_DO_NOT_SHIP.txt
projects/TerrainDemos/Plugins/GeneratedTools/SmokeGeneratedTool/: plugin.json
projects/TerrainDemos/Plugins/GeneratedTools/SmokeGeneratedTool/Source/: SmokeGeneratedTool.cpp
projects/UnifiedVolumetricTerrainProof/: AI Native Project.aineproject.json  UnifiedVolumetricTerrainPerformance.audit.txt  UnifiedVolumetricTerrainProof.audit.txt  UnifiedVolumetricTerrainProof.validation.txt
projects/UnifiedVolumetricTerrainProof/Assets/Scenes/: Prototype.scene.json  UnifiedVolumetricTerrainProof.scene.json
scripts/: run-smoke-tests.ps1
src/: AgentOrchestrator.cpp  AgentOrchestrator.h  ComponentRegistry.h  EditorApp.cpp  EditorApp.h  EditorState.cpp  EditorState.h  Physics.h  ProviderResult.cpp  ProviderResult.h  ToolGateway.cpp  ToolGateway.h  main.cpp
src/engine/assets/: Sprite.cpp  Sprite.h
src/engine/cave/: CaveVolume.cpp  CaveVolume.h
src/engine/core/: Log.h  PerformanceProfiler.cpp  PerformanceProfiler.h
src/engine/physics/: Physics.cpp  Physics.h
src/engine/runtime/: Camera.cpp  Camera.h  ComponentRegistry.cpp  ComponentRegistry.h  Runtime.cpp  Runtime.h
src/engine/scene/: Component.h  Entity.h  SceneSerialization.cpp  SceneSerialization.h  SceneValidation.cpp  SceneValidation.h
src/engine/scripting/: ScriptCompiler.cpp  ScriptCompiler.h  ScriptRuntimeHost.cpp  ScriptRuntimeHost.h
src/engine/terrain/: Terrain.cpp  Terrain.h
src/player/: main.cpp
tests/: cave_tests.cpp  physics_tests.cpp  runtime_tests.cpp  sprite_tests.cpp  terrain_tests.cpp
